# templates

./: README.md
ddd/: .env.example  README.md  docker-compose.dev.yml  docker-compose.prod.yml
ddd/.github/workflows/: check-pr.yml
ddd/app/: Dockerfile.dev  Dockerfile.prod  app.py  container.py  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  pyproject.toml
ddd/app/api/v1/: movies.py
ddd/app/core/: config.py  logger.py
ddd/app/databases/: cache.py  db.py
ddd/app/interfaces/: service.py  storage.py
ddd/app/interfaces/repositories/: cache.py  db.py
ddd/app/interfaces/repository/: cache.py  db.py
ddd/app/repositories/: cache.py  db.py  movie.py
ddd/app/services/: movie.py
ddd/nginx/etc/nginx/: nginx.conf
ddd/nginx/etc/nginx/conf.d/: default.conf.tmp
examples/: fastapi.ipynb
